@@ -9,7 +9,6 @@
 		<include condition="Skin.HasSetting(home2)">Home2_Icons</include>
 		<include>Global_ContextFilter</include>
 		<include>Global_Time</include>
-		<include>HomeCurrentWeather</include>
 		<include>GlobalMusic</include>
 		<include condition="Skin.HasSetting(DebugGrid)">Object_DebugGrid</include>
 		<include condition="Skin.HasSetting(DebugMode)">Debug</include>
